--- a/Apoorv.html
+++ b/Apoorv.html
@@ -21,7 +21,7 @@
         <div class="header-right">
           <a href="#">Lessons</a>
           <a href="#">Sign in</a>
-          <a href="https://www.github.com/Apoorv-cloud/Blackhead/tree/master/login.html" class="login" target="_blank">Log in</a>
+          <a href="https://apoorv-cloud.github.io/Blackhead/login.html" class="login" target="_blank">Log in</a>
         </div>
       </div>
     </header>
