--- a/Apoorv.html
+++ b/Apoorv.html
@@ -19,9 +19,9 @@
         <!-- Add a menu icon here -->
         <a href="#" class="menu-icon"><span class="fa fa-bars"></span></a>
         <div class="header-right">
-          <a href="#">Lessons</a>
+          <a href="#"> Memories </a>
           <a href="#">Sign in</a>
-          <a href="https://apoorv-cloud.github.io/Blackhead/login.html" class="login" target="_blank">Log in</a>
+          <a href="https://apoorv-cloud.github.io/Blackhead/login.html" class="login" target="_blank"> Log in </a>
         </div>
       </div>
     </header>
