--- a/memories.html
+++ b/memories.html
@@ -66,9 +66,9 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="auto1.jpg" style="width:100%">
+    <img src="auto1.jpeg" style="width:100%">
     <img src="a1.jpg" style="width:100%">
-    <img src="a2.jpg" style="width:100%">
+    <img src="a2.jpeg" style="width:100%">
     <img src="a3.jpg" style="width:100%">
     <img src="auto2.jpg" style="width:100%">
     <img src="a4.jpg" style="width:100%">
@@ -77,7 +77,7 @@ body {
   <div class="column">
     <img src="a6.jpeg" style="width:100%">
     <img src="auto3.jpg" style="width:100%">
-    <img src="a7.jpg" style="width:100%">
+    <img src="a7.jpeg" style="width:100%">
     <img src="a8.jpg" style="width:100%">
     <img src="auto4.jpg" style="width:100%">
     <img src="a9.jpg" style="width:100%">
