--- a/memories.html
+++ b/memories.html
@@ -68,14 +68,14 @@ body {
   <div class="column">
     <img src="auto1.jpeg" style="width:100%">
     <img src="a1.jpg" style="width:100%">
-    <img src="a2.jpeg" style="width:100%">
+    <img src="a2.jpg" style="width:100%">
     <img src="a3.jpg" style="width:100%">
-    <img src="auto2.jpg" style="width:100%">
+    <img src="auto2.jpeg" style="width:100%">
     <img src="a4.jpg" style="width:100%">
     <img src="a5.jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="a6.jpeg" style="width:100%">
+    <img src="a6.jpg" style="width:100%">
     <img src="auto3.jpg" style="width:100%">
     <img src="a7.jpeg" style="width:100%">
     <img src="a8.jpg" style="width:100%">
@@ -84,7 +84,7 @@ body {
   </div>  
   <div class="column">
     <img src="a10.jpg" style="width:100%">
-    <img src="a11.jpeg" style="width:100%">
+    <img src="a11.jpg" style="width:100%">
     <img src="a12.jpg" style="width:100%">
     <img src="a13.jpg" style="width:100%">
     <img src="a14.jpg" style="width:100%">
@@ -96,7 +96,7 @@ body {
     <img src="a18.jpg" style="width:100%">
     <img src="a19.jpg" style="width:100%">
     <img src="a20.jpg" style="width:100%">
-    <img src="a21.jpeg" style="width:100%">
+    <img src="a21.jpg" style="width:100%">
     <img src="a22.jpg" style="width:100%">
   </div>
 </div>
