--- a/memories.html
+++ b/memories.html
@@ -40,9 +40,9 @@ body {
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
   .column {
-    -ms-flex: 50%;
-    flex: 50%;
-    max-width: 50%;
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
   }
 }
 
@@ -59,8 +59,8 @@ body {
 
 <!-- Header -->
 <div class="header">
-  <h1>Responsive Image Grid</h1>
-  <p>Resize the browser window to see the responsive effect.</p>
+  <h1> MEMORIES FOREVER !! </h1>
+ 
 </div>
 
 <!-- Photo Grid -->
