--- a/memories.html
+++ b/memories.html
@@ -8,6 +8,7 @@
 body {
   margin: 0;
   font-family: Arial;
+  bgcolor: Orange;
 }
 
 .header {
@@ -25,33 +26,33 @@ body {
 
 /* Create four equal columns that sits next to each other */
 .column {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
-  max-width: 25%;
+  -ms-flex: 50%; /* IE10 */
+  flex: 50%;
+  max-width: 50%;
   padding: 0 4px;
 }
 
 .column img {
   margin-top: 8px;
   vertical-align: middle;
-  width: 100%;
+  width: 200%;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
   .column {
-    -ms-flex: 100%;
-    flex: 100%;
-    max-width: 100%;
+    -ms-flex: 200%;
+    flex: 200%;
+    max-width: 200%;
   }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .column {
-    -ms-flex: 100%;
-    flex: 100%;
-    max-width: 100%;
+    -ms-flex: 200%;
+    flex: 200%;
+    max-width: 200%;
   }
 }
 </style>
