--- a/Apoorv.html
+++ b/Apoorv.html
@@ -19,7 +19,7 @@
         <!-- Add a menu icon here -->
         <a href="#" class="menu-icon"><span class="fa fa-bars"></span></a>
         <div class="header-right">
-          <a href="#"> Memories </a>
+          <a href="https://apoorv-cloud.github.io/Blackhead/memories.html" class="login" target="_blank"> Memories </a>
           <a href="#">Sign in</a>
           <a href="https://apoorv-cloud.github.io/Blackhead/login.html" class="login" target="_blank"> Log in </a>
         </div>
