--- a/Apoorv.html
+++ b/Apoorv.html
@@ -84,7 +84,7 @@
           <div class="lesson">
             <div class="lesson-icon">
               <a href="https://instagram.com/rydam44?igshid=ulthz9h40r1l" target="_blank"><img src="rytham.jpg"></a>
-              <p>Rytham Agarwal</p>
+              <p>Rydam Agarwal</p>
             </div>
             <p class="text-contents"></p>
           </div>
@@ -92,7 +92,7 @@
           <div class="lesson">
             <div class="lesson-icon">
               <a href="https://instagram.com/strings_aryan?igshid=y08huhizasrc" target="_blank"><img src="aryan.jpg"></a>
-              <p>Aryan</p>
+              <p>Aryan Agarwal </p>
             </div>
             <p class="text-contents"></p>
           </div>
@@ -114,7 +114,7 @@
           <h2>Ready to become our member?</h2>
           <h3>Let's do something creative!</h3>
         </div>
-        <a href="https://singh823232.github.io/coursera-test/sit/login.html" target="_blank"><span class="btn message">Log in</span></a>
+        <a href="https://apoorv-cloud.github.io/Blackhead/login.html" target="_blank"><span class="btn message">Log in</span></a>
       </div>
     </div>
     
