--- a/memories.html
+++ b/memories.html
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   font-family: Arial;
-  bgcolor: Orange;
+  background-color: Orange;
 }
 
 .header {
@@ -74,6 +74,7 @@ body {
     <img src="auto2.jpeg" style="width:100%">
     <img src="a4.jpg" style="width:100%">
     <img src="a5.jpg" style="width:100%">
+    <img src="a28.jpg" style="width:100%">
   </div>
   <div class="column">
     <img src="a6.jpg" style="width:100%">
@@ -82,6 +83,8 @@ body {
     <img src="a8.jpg" style="width:100%">
     <img src="auto4.jpg" style="width:100%">
     <img src="a9.jpg" style="width:100%">
+    <img src="a23.jpg" style="width:100%">
+    <img src="a27.jpg" style="width:100%">
   </div>  
   <div class="column">
     <img src="a10.jpg" style="width:100%">
@@ -91,6 +94,7 @@ body {
     <img src="a14.jpg" style="width:100%">
     <img src="a15.jpg" style="width:100%">
     <img src="a16.jpg" style="width:100%">
+    <img src="a26.jpg" style="width:100%">
   </div>
   <div class="column">
     <img src="a17.jpg" style="width:100%">
@@ -99,6 +103,8 @@ body {
     <img src="a20.jpg" style="width:100%">
     <img src="a21.jpg" style="width:100%">
     <img src="a22.jpg" style="width:100%">
+    <img src="a24.jpg" style="width:100%">
+    <img src="a25.jpg" style="width:100%">
   </div>
 </div>
 
