--- a/memories.html
+++ b/memories.html
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   font-family: Arial;
-  background-color: Orange;
+  background-color: yellow;
 }
 
 .header {
@@ -83,7 +83,7 @@ body {
     <img src="a8.jpg" style="width:100%">
     <img src="auto4.jpg" style="width:100%">
     <img src="a9.jpg" style="width:100%">
-    <img src="a23.jpg" style="width:100%">
+    <img src="a23.jpeg" style="width:100%">
     <img src="a27.jpg" style="width:100%">
   </div>  
   <div class="column">
