--- a/Apoorv.html
+++ b/Apoorv.html
@@ -105,10 +105,11 @@
             </div>
             <p class="text-contents"></p>
           </div>
-          <hr>
+          <div class="message-wrapper">
+      <div class="container">
 
         <a href="https://apoorv-cloud.github.io/Blackhead/KnowMore.html"> <button type="button" class="btn btn-outline-success btn-lg btn-block">Know More About Us.</button> </a>
-            
+            </div></div>
           
           <div class="clear"></div>
         </div>
