--- a/Apoorv.html
+++ b/Apoorv.html
@@ -123,7 +123,7 @@
           <p> </p>
           <p></p>
           <a href="https://apoorv-cloud.github.io/Blackhead/KnowMore.html">
-          <button class="block, border-radius:10px">Know More About Us. </button></a>
+          <button class="block"> Know More About Us. </button></a>
           
           <div class="clear"></div>
         </div>
