--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Restaurant</title>
+	<title>GOG Log In</title>
 	<link rel="stylesheet" href="styling.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
 				<input type="password" name="" placeholder="Enter Password">
 				<input type="submit" name="" value="Log in">
 				<a href="#">Lost your password?</a><br>
-				<a href="#">Dont have an account?</a>
+				<a href="https://apoorv-cloud.github.io/Blackhead/Apoorv.html">Dont have an account?</a>
 			</form>
 	</div>
 </body>
