--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 				<p>Password</p>
 				<input type="password" name="" placeholder="Enter Password">
 				<input type="submit" name="" value="Log in">
-				<a href="#">Lost your password?</a><br>
+				<a href="https://apoorv-cloud.github.io/Blackhead/LostPassword.html">Lost your password?</a><br>
 				<a href="https://apoorv-cloud.github.io/Blackhead/Apoorv.html">Dont have an account?</a>
 			</form>
 	</div>
