--- a/LostPassword.html
+++ b/LostPassword.html
@@ -4,15 +4,15 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
-
+<meta charset="utf-8">
+<link rel="stylesheet" href="styling.css">
 
 
 <title> Lost Your Password </title>
 
 </head>
 <body>
-
+<div class="loginbox">
 
  
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -49,7 +49,7 @@
             </div>
           </div>
 	</div>
-
+</div>
 </div>
 </body>
 </html>
