--- a/LostPassword.html
+++ b/LostPassword.html
@@ -12,10 +12,10 @@
 
 </head>
 <body>
-<div class="loginbox">
+
 
  
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="styling" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  <div class="form-gap"></div>
 <div class="container">
 	<div class="row">
