--- a/LostPassword.html
+++ b/LostPassword.html
@@ -15,7 +15,7 @@
 
 
  
-<link rel="styling" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  <div class="form-gap"></div>
 <div class="container">
 	<div class="row">
