--- a/LostPassword.html
+++ b/LostPassword.html
@@ -16,7 +16,7 @@
 
  
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
- <div class="form-gap"></div>
+ <div class="form-gap">
 <div class="container">
 	<div class="row">
 		<div class="col-md-4 col-md-offset-4">
@@ -50,6 +50,6 @@
           </div>
 	</div>
 </div>
-
+</div>
 </body>
 </html>
