--- a/KnowMore.html
+++ b/KnowMore.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="stylesheet.css">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -14,16 +14,17 @@
 </head>
 
 <body>
-<div id="particles-js"></div> 
 
-<script type="text/javascript" src="particles.js"></script> 
 
-<script type="text/javascript" src="app.js"></script>
+
+
+
     <! here a navigation bar>
         <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd; ">
 
-            <a href="" class="">
+            <a href="https://apoorv-cloud.github.io/Blackhead/Apoorv.html" class="">
             <span class="my-6"> 
+                
                 <img id="logo-head" src="gog.jpg" style="width: 44px; margin-top: 5px; border-radius: 50%;
                 border: 1px solid red;">
                 <h5  style=" float:left; color: silver; text-align: center; font-size: 10px;"></h5>
