--- a/Apoorv.html
+++ b/Apoorv.html
@@ -43,9 +43,9 @@
     
     <div id="particles-js"></div> 
 
-<script type="text/javascript" src="particles.js"></script> 
+<script type="text/javascript" src="js/particles.min.js"></script> 
 
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 
     <div class="top-wrapper">
       <div class="container">
