--- a/KnowMore.html
+++ b/KnowMore.html
@@ -162,7 +162,7 @@
               font-size: 10px; margin-top:0;">Gog members are unique.</p>
             </div>
           </footer>
-<!-- <script src="https://code.jquery.com/jquery-3.4.1.js"></script>--!>
+<!-- <script src="https://code.jquery.com/jquery-3.4.1.js"></script> -->
 <script type="text/javascript"> 
 $(window).scroll(function(){ 
 var scroll = $(window).scrollTop(), 
