--- a/Apoorv.html
+++ b/Apoorv.html
@@ -163,7 +163,9 @@
         <p>Gog members are unique.</p>
       </div>
     </footer>
-        
+        <script type="text/javascript" src="js/particles.min.js"></script>
+
+  <script type="text/javascript" src="js/app.js"></script>
         
           </body>
 </html>
