--- a/Apoorv.html
+++ b/Apoorv.html
@@ -98,7 +98,7 @@
 
           <div class="lesson-icon">
 
-            <a href="https://instagram.com/the_sid_?igshid=1gqudox2s6py1" target="_blank"><img src="sid.jgp"></a>
+            <a href="https://instagram.com/the_sid_?igshid=1gqudox2s6py1" target="_blank"><img src="sid.jpg"></a>
 
             <p>Siddharth Samanta</p>
 
