--- a/Apoorv.html
+++ b/Apoorv.html
@@ -234,7 +234,7 @@
 
     <div class="container">
 
-      <img src="rest.jpg">
+      <img src="rest.png">
 
       <p>Connect with us for more fun.</p>
 
@@ -244,9 +244,9 @@
 
   </footer>
 
-  <script type="text/javascript" src="js/particles.min.js"></script>
+  <script type="text/javascript" src="particles.min.js"></script>
 
-  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 
 </body>
 
