--- a/Apoorv.html
+++ b/Apoorv.html
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Gang Of G*****</title>
+  <title>GOG</title>
 
   <link rel="stylesheet" href="stylesheet.css">
 
